--- a/man/gensio_control.3
+++ b/man/gensio_control.3
@@ -403,6 +403,10 @@ For sound gensios, return the format of the user data.  Like "float",
 .SS "GENSIO_CONTROL_DRAIN_COUNT"
 The amount of data left to be transmitted.  For sound, this is in
 frames.
+
+For ax25, this is the number of pending sent frames.  If you pass in a
+"0", it will count frames for the current conneciton.  If you pass in
+"1", it will count frames for all connections.
 .SS "SERIAL PORT CONTROLS"
 The following set various serial port values.
 
